force-app/main/default/objects/Auditoria_Estoque__c/Auditoria_Estoque__c.object-meta.xml
<CustomObject>
    <label>Auditoria Estoque</label>
    <nameField>
        <displayFormat>AUE-{0000}</displayFormat>
        <label>Nome de Auditoria de Estoque</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auditorias Estoques</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>