force-app/main/default/objects/Auditoria_Estoque__c/fields/Acuracidade__c.field-meta.xml
<CustomField>
    <fullName>Acuracidade__c</fullName>
    <formula>((Equipamentos_Verificados__c-Equipamentos_Divergentes__c)/Equipamentos_Verificados__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acuracidade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>