force-app/main/default/objects/Auditoria_Estoque__c/fields/Conclusao__c.field-meta.xml
<CustomField>
    <fullName>Conclusao__c</fullName>
    <label>Conclusões</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>