force-app/main/default/objects/Auditoria_Estoque__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Conta</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8 OR 9 OR 10</booleanFilter>
        <filterItems>
            <field>Account.CNPJ__c</field>
            <operation>equals</operation>
            <value>05.743.288/0001-08,05.743.288/0006-12,05.743.288/0005-31</value>
        </filterItems>
        <filterItems>
            <field>Account.CNPJ__c</field>
            <operation>equals</operation>
            <value>05.743.288/0003-70,05.743.288/0004-50</value>
        </filterItems>
        <filterItems>
            <field>Account.CNPJ__c</field>
            <operation>equals</operation>
            <value>40.014.621/0001-49</value>
        </filterItems>
        <filterItems>
            <field>Account.CNPJ__c</field>
            <operation>equals</operation>
            <value>40.014.621/0002-20</value>
        </filterItems>
        <filterItems>
            <field>Account.CNPJ__c</field>
            <operation>equals</operation>
            <value>40.014.621/0003-00</value>
        </filterItems>
        <filterItems>
            <field>Account.CNPJ__c</field>
            <operation>equals</operation>
            <value>40.014.621/0004-91</value>
        </filterItems>
        <filterItems>
            <field>Account.CNPJ__c</field>
            <operation>equals</operation>
            <value>42.008.640/0001-98</value>
        </filterItems>
        <filterItems>
            <field>Account.CNPJ__c</field>
            <operation>equals</operation>
            <value>42.006.832/0001-65</value>
        </filterItems>
        <filterItems>
            <field>Account.CNPJ__c</field>
            <operation>equals</operation>
            <value>23.813.386/0001-56</value>
        </filterItems>
        <filterItems>
            <field>Account.CNPJ__c</field>
            <operation>equals</operation>
            <value>27.476.124/0001-02</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Auditorias Estoques</relationshipLabel>
    <relationshipName>Auditorias_Estoques</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>