force-app/main/default/objects/Auditoria_Estoque__c/fields/Data_da_auditoria__c.field-meta.xml
<CustomField>
    <fullName>Data_da_auditoria__c</fullName>
    <label>Data da auditoria</label>
    <type>Date</type>
</CustomField>