force-app/main/default/objects/Auditoria_Estoque__c/fields/Equipamentos_Divergentes__c.field-meta.xml
<CustomField>
    <fullName>Equipamentos_Divergentes__c</fullName>
    <label>Equipamentos Divergentes</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>