force-app/main/default/objects/Auditoria_Estoque__c/fields/Observacao__c.field-meta.xml
<CustomField>
    <fullName>Observacao__c</fullName>
    <label>Observações a Serem Consideradas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>