force-app/main/default/objects/Auditoria_Estoque__c/fields/Trilha__c.field-meta.xml
<CustomField>
    <fullName>Trilha__c</fullName>
    <label>Trilha da Auditoria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>