force-app/main/default/objects/Auditoria_Estoque__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Equipamentos_Verificados__c</columns>
    <columns>Acuracidade__c</columns>
    <columns>Nao_Conforme__c</columns>
    <columns>Conta__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>